# Linked-File-System-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
data/: menu.txt  test_system_1.json  test_system_2.json
include/: file_operation.h  file_system.h  file_system_tests.h  main_program.h  main_tests.h  memory_management.h  process_ui_commands_tests.h  stack.h  ui.h  ui_tests.h
lib/unity/: unityTargets.cmake
src/: file_operation.c  file_system.c  memory_management.c  ui.c
src/ui/: main_program.c  ui.c
src/util/: file_operation.c  file_system.c  memory_management.c  stack.c
test/: file_system_tests.c  main_tests.c  ui_tests.c
